issue with invisible red blocks

--- a/assets/style.css
+++ b/assets/style.css
@@ -345,7 +345,7 @@ table h3 {
     padding: 0;
 }
 
-.lava {
+.redblock {
     background: #ff6464;
 }
 
